[package]
name = "hxql"
version = "0.1.0"
edition = "2021"
description = "Easily build dynamic apps with HTMX, GraphQL, and Handlebars."
license = "MIT"


[dependencies]
clap = { version = "4.5.7", features = ["derive"] }
env_logger = "0.11.3"
handlebars = "5.1.2"
http = "1.1.0"
log = "0.4.21"
reqwest = { version = "0.12.5", features = ["json"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
tokio = { version = "1.38.0", features = ["full"] }
warp = "0.3.7"
